# fp-todo

service/: cabal.project  fourmolu.yaml  hie.yaml
service/api/: todo-api.cabal
service/api/src/Todo/: Api.hs
service/api/src/Todo/Api/Types/: TodoItem.hs
service/core/: todo-core.cabal
service/core-memory/: todo-memory.cabal
service/core-memory/src/Todo/Memory/TodoItem/: Service.hs
service/core-postgres/: todo-postgres.cabal
service/core-postgres/src/Todo/Postgres/TodoItem/: Migration.hs  Service.hs
service/core-postgres/test/Todo/Postgres/: Gen.hs
service/core-postgres/test/Todo/Postgres/Statement/: Test.hs
service/core/src/Todo/Core/TodoItem/: Service.hs  Types.hs
service/postgres/: todo-postgres.cabal
service/postgres/src/Todo/Postgres/TodoItem/: Migration.hs  Service.hs
service/postgres/test/: Main.hs
service/postgres/test/Todo/Postgres/: Gen.hs  Test.hs
service/postgres/test/Todo/Postgres/Statement/: Test.hs
service/server/: todo-server.cabal
service/server/app/: Main.hs
service/server/src/Todo/: Server.hs
service/server/src/Todo/Servers/: TodoItem.hs
service/server/src/Todo/Util/: Logger.hs  ServiceEnvironment.hs
service/server/test/: Main.hs
service/server/test/Todo/Servers/Test/: TodoApp.hs
