cabal-version:      2.4
name:               todo-api
version:            0.1.0.0

library
    exposed-modules:
        Todo.Api
      , Todo.Api.Types.TodoItem

    build-depends:
        base ^>=4.14.1.0
      , relude
      , todo-core
      , servant
      , aeson
      , lens

    mixins:
        base hiding (Prelude)
      , relude (Relude as Prelude)
      , relude

    hs-source-dirs:   src
    default-language: Haskell2010
