cabal-version:      2.4
name:               todo-memory
version:            0.1.0.0
author:             gareth stokes
maintainer:         gareth.stokes@paidright.io

library
    exposed-modules:
        Todo.Memory.TodoItem.Service

    build-depends:
        base ^>=4.14.1.0
      , relude
      , todo-core
      , lens
      , exceptions
      , mtl

    mixins:
        base hiding (Prelude)
      , relude (Relude as Prelude)
      , relude

    hs-source-dirs:
        src

    default-language:
      Haskell2010
