cabal-version:      2.4
name:               todo-postgres
version:            0.1.0.0

library
    exposed-modules:
        Todo.Postgres.TodoItem.Service
      , Todo.Postgres.TodoItem.Migration

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0
      , todo-core
      , mtl
      , lens
      , transformers
      , transformers-either
      , exceptions
      , traction
      , bytestring
      , postgresql-simple
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite todo-postgres-tests
  default-language: 
    Haskell2010

  type:             
    exitcode-stdio-1.0

  hs-source-dirs:
    test

  build-depends:
      base ^>=4.14.1.0
    , todo-core
    , todo-postgres
    , transformers-either
    , nest
    , tasty
    , tasty-hedgehog
    , hedgehog
    , traction
    , postgresql-simple
    , lens
    , mmorph

  main-is:
    Main.hs

  other-modules:
      Todo.Postgres.Gen
    , Todo.Postgres.Statement.Test
