cabal-version:      2.4
name:               todo-server
version:            0.1.0.0

library
    exposed-modules:
        Todo.Server
      , Todo.Util.ServiceEnvironment
      , Todo.Util.Logger
      , Todo.Servers.TodoItem

    build-depends:
        base
      , relude
      , todo-core
      , todo-api
      , aeson
      , transformers-either
      , http-types == 0.12.3
      , wai
      , wai-logger
      , servant-server
      , nest
      , mtl

    mixins:
        base hiding (Prelude)
      , relude (Relude as Prelude)
      , relude

    default-language:
      Haskell2010

    hs-source-dirs:
      src
    ghc-options:
      -O2
      -Wall
      -Werror
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns

executable todo-server
    main-is:
      Main.hs

    build-depends:
        base
      , relude
      , todo-server
      , todo-postgres
      , wai
      , wai-logger
      , warp
      , mtl

    mixins:
        base hiding (Prelude)
      , relude (Relude as Prelude)
      , relude

    hs-source-dirs:
      app

    default-language:
      Haskell2010

test-suite todo-server-tests
  default-language:
    Haskell2010

  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    test

  build-depends:
      base ^>=4.14.1.0
    , relude
    , todo-core
    , todo-memory
    , todo-server
    , todo-api
    , lens
    , containers
    , transformers-either
    , hspec
    , hspec-wai
    , warp
    , wai
    , servant-client
    , http-client

  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude

  main-is:
    Main.hs

  other-modules:
      Todo.Servers.Test.TodoApp
